--- a/estate_stock/i18n/id.po
+++ b/estate_stock/i18n/id.po
@@ -6,16 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-31 07:50+0000\n"
-"PO-Revision-Date: 2018-01-31 15:02+0700\n"
+"POT-Creation-Date: 2018-03-09 08:01+0000\n"
+"PO-Revision-Date: 2018-03-09 15:14+0700\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Poedit 2.0.5\n"
-"Last-Translator: \n"
-"Language: id\n"
 
 #. module: estate_stock
 #: model:ir.ui.view,arch_db:estate_stock.material_order_view_form
@@ -25,12 +25,12 @@ msgstr "(+X/-Y): X adalah bahan yg disiapkan, Y adalah bahan yang dikirim."
 #. module: estate_stock
 #: model:ir.ui.view,arch_db:estate_stock.material_order_view_form
 msgid "<span class=\"o_stat_text\">Picking</span>"
-msgstr "<span class=“o_stat_text”>Pengambilan</span>"
+msgstr "<span class=\"o_stat_text\">Transaksi</span>"
 
 #. module: estate_stock
 #: model:ir.ui.view,arch_db:estate_stock.material_order_view_form
 msgid "<span class=\"o_stat_text\">Stock Move</span>"
-msgstr "<span class=“o_stat_text”>Stok</span>"
+msgstr "<span class=\"o_stat_text\">Perpindahan</span>"
 
 #. module: estate_stock
 #: model:ir.model.fields,field_description:estate_stock.field_estate_stock_material_order_message_needaction
@@ -250,6 +250,11 @@ msgstr ""
 #: model:ir.ui.view,arch_db:estate_stock.material_order_view_search
 msgid "In Progress"
 msgstr "Dikerjakan"
+
+#. module: estate_stock
+#: model:ir.model,name:estate_stock.model_stock_inventory
+msgid "Inventory"
+msgstr ""
 
 #. module: estate_stock
 #: model:ir.model.fields,field_description:estate_stock.field_estate_stock_material_order_message_is_follower
